--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "react-typescript",
+  "name": "react-typescript-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server --mode=development --env.NODE_ENV=development --open --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "webpack-dev-server --mode=development --env.NODE_ENV=development --open --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
