--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
+    "htm": "^2.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
   "devDependencies": {
+    "@types/react": "^16.8.3",
     "awesome-typescript-loader": "^5.2.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.3.3",
     "webpack": "^4.29.3",
