--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
     "sourceMap": true,
+    "target": "es5",
+    "module": "es6",
+    "moduleResolution": "node",
+    "removeComments": true,
     "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "es6",
+    "lib": ["es6", "es7", "dom"],
     "jsx": "react"
   },
   "include": [
     "./src/**/*"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
