--- a/package.json
+++ b/package.json
@@ -4,22 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "webpack-dev-server --mode=development --env.NODE_ENV=development --open --config webpack.config.js"
+    "start:dev": "webpack-dev-server --mode=development --env.NODE_ENV=development --open --config webpack.config.js",
+    "test": "npx jest --env=jsdom"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/react-dom": "^16.8.0",
+    "axios": "^0.18.0",
     "htm": "^2.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.6",
     "@types/react": "^16.8.3",
     "awesome-typescript-loader": "^5.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.1.0",
+    "jest-dom": "^3.1.2",
     "mini-css-extract-plugin": "^0.5.0",
+    "react-testing-library": "^5.8.0",
     "source-map-loader": "^0.2.4",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.3.3",
     "webpack": "^4.29.3",
     "webpack-bundle-analyzer": "^3.0.4",
